[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ViTables"
authors = [{name = "Vicent Mas", email = "vmas@vitables.org"}]
readme = "README.md"
license = {file = "LICENSE.txt"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: X11 Applications",
  "Environment :: MacOS X",
  "Environment :: Win32 (MS Windows)",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: POSIX",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering"
]
dynamic = ["version", "description"]
keywords = ["HDF5", "PyTables"]

dependencies = [
  "python >=3.6",
  "qtpy >=2.2",
  "tables >=3.0",
  "setuptools >=65.0"
]

[project.optional-dependencies]
pyqt = [
  "PyQt5 >=5.5.1",
  "PyQt6 >=6.0", 
  "PySide2 >=5.15.2",
  "PySide6 >=6.4"
]

[project.gui-scripts]
vitables = "vitables.start:gui"

[project.entry-points."vitables.plugins"]
columnar_org = "vitables.plugins.columnorg.columnar_org:ArrayColsOrganizer"
dbs_tree_sort = "vitables.plugins.dbstreesort.dbs_tree_sort:DBsTreeSort"
time_series = "vitables.plugins.timeseries.time_series:TSFormatter"

[project.urls]
Home = "https://vitables.org"

[tool.flit.module]
name = "vitables"

[tool.flit.external-data]
directory = "flit_data"

